--- a/module-2-mutation-KOKE/client/src/App.css
+++ b/module-2-mutation-KOKE/client/src/App.css
@@ -77,6 +77,7 @@ div.peopleList {
   /*position: fixed;*/
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 div.person {
@@ -89,11 +90,18 @@ div.person {
   text-align: left;
   /*padding-left: 30px;*/
   font-size: 16px;
+  margin: 5px 5px 5px 5px;
+  border-radius: 10px;
+  display: block;
+  background: #333;
+  height: 200px;
 }
 
 .personPicture {
   width: 100%;
   height: auto;
+  border-radius: 10px;
+  display: block;
 }
 
 div.optimistic {
@@ -133,6 +141,11 @@ div.peopleList input:focus {
 div.person span {
   position: absolute;
   left: 10px;
+  margin: -29px 0px;
+  background: #333;
+  padding: 2px;
+  border-radius: 5px;
+  font-weight: bold;
 }
 
 div.personName {
